ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/BankBranchDetails__c.object-meta.xml
<CustomObject>
    <label>Bank Branch Detail</label>
    <nameField>
        <label>Bank Branch Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Branch Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>