ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address_1</label>
    <type>TextArea</type>
</CustomField>