ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/Bl_Code__c.field-meta.xml
<CustomField>
    <fullName>Bl_Code__c</fullName>
    <formula>Bl_Code_Details__r.Bl_Code__c</formula>
    <label>Bl Code</label>
    <type>Text</type>
</CustomField>