ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/Bl_Code_Details__c.field-meta.xml
<CustomField>
    <fullName>Bl_Code_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bl Code Details</label>
    <referenceTo>Bl_Code_Details__c</referenceTo>
    <relationshipName>Bank_Branch_Details</relationshipName>
    <type>Lookup</type>
</CustomField>