ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/Business_Hub__c.field-meta.xml
<CustomField>
    <fullName>Business_Hub__c</fullName>
    <label>Business_Hub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>