ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/Geo_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Geo_State_Code__c</fullName>
    <formula>Geo_State_Master__r.State_Code__c</formula>
    <label>Geo State Code</label>
    <type>Text</type>
</CustomField>