ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/MA_City__c.field-meta.xml
<CustomField>
    <fullName>MA_City__c</fullName>
    <label>MA City</label>
    <length>3</length>
    <type>Text</type>
</CustomField>