ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/SA_IBL_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>SA_IBL_Branch_Code__c</fullName>
    <label>SA_IBL_Branch_Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>