ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State_Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>