ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>UniqueIdentifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>