ProdIND/ProdPrograms/force-app/main/default/objects/BankBranchDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>District__c</columns>
    <columns>Bl_Code_Details__c</columns>
    <columns>Geo_State_Master__c</columns>
    <columns>City__c</columns>
    <columns>State_Code__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Bl_Code__c</columns>
    <columns>MA_City__c</columns>
    <columns>Pincode__c</columns>
    <columns>UniqueIdentifier__c</columns>
    <columns>Business_Hub__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>